--- a/Módulo J/ex008/style.css
+++ b/Módulo J/ex008/style.css
@@ -19,5 +19,23 @@
     padding: 5px;
     border-radius: 5px;
     display: flex;
-    width: 200%;
+    width: 200px;
+}
+.campoForm{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin-bottom: 10px;
+}
+.campoForm input{
+    background-color: #eee;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+.campoForm button{
+    background-color: #888;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 5px;
 }
