--- a/Módulo K/style.css
+++ b/Módulo K/style.css
@@ -23,9 +23,6 @@
     justify-content: center;
     align-items: center;
 }
-.div-nome > p{
-    color: white;
-}
 .div-display{
     display: flex;
     justify-content: center;
@@ -35,6 +32,12 @@
     padding: 10px;
     border-radius: 10px;
     background-color: #d4d4d4;
+}
+#display{
+    width: 90%;
+    text-align: right;
+    font-size: 2em;
+    overflow-x: auto;
 }
 .div-teclas{
     display: flex;
