--- a/Módulo K/ex003/style.css
+++ b/Módulo K/ex003/style.css
@@ -9,14 +9,34 @@
 }
 .calc{
     display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    position: absolute;
+    top: 0; left: -260px;
+    transition: all 0.2s;
+}
+#calc_principal{
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 50px auto;
     padding: 10px;
-    width: 260px;
     background-color: #383838;
     border-radius: 10px;
+    flex: 0 0 260px;
+}
+.calc--exibir{
+    left: 0 !important;
+    transition: all 0.2s;
+}
+#calc_aba{
+    color: white;
+    background-color: #383838;
+    padding: 10px;
+    border-radius: 0 3px 3px 0;
+    cursor: pointer;
 }
 .div-nome{
     display: flex;
