--- a/Módulo K/ex010/style.css
+++ b/Módulo K/ex010/style.css
@@ -1,1 +1,20 @@
 @charset "UTF-8";
+*{
+    border: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.olhos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 400px;
+    height: 200px;
+}
+#olho-direito, #olho-esquerdo{
+    width: 200px;
+    height: 200px;
+    transform-origin: center center;
+}
